--- a/companies-ms/package.json
+++ b/companies-ms/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "users",
+  "name": "companies",
   "version": "1.0.0",
-  "description": "Users and authentication module",
+  "description": "Companies flow handler",
   "main": "index.js",
   "author": "Fabio Tovar",
   "license": "MIT",
@@ -11,6 +11,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
+    "merge-descriptors": "^1.0.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.6",
     "path": "^0.12.7",
