--- a/users-ms/package.json
+++ b/users-ms/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "author": "Fabio Tovar",
   "license": "MIT",
-  "type": "module",
   "dependencies": {
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
@@ -13,6 +12,7 @@
     "fs": "^0.0.1-security",
     "merge-descriptors": "^1.0.1",
     "morgan": "^1.10.0",
+    "mysql2": "^2.2.5",
     "nodemon": "^2.0.6",
     "path": "^0.12.7",
     "sequelize": "^6.3.5",
@@ -20,6 +20,8 @@
   },
   "scripts": {
     "start": "",
-    "dev": "NODE_ENV=development nodemon -L app.js"
+    "dev": "NODE_ENV=development nodemon -L app.js",
+    "migrate": "export NODE_ENV=development && sequelize-cli db:migrate",
+    "migrate:undo": "export NODE_ENV=development && sequelize-cli db:migrate:undo"
   }
 }
