--- a/companies-ms/package.json
+++ b/companies-ms/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "author": "Fabio Tovar",
   "license": "MIT",
-  "type": "module",
   "dependencies": {
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
@@ -13,13 +12,15 @@
     "fs": "^0.0.1-security",
     "merge-descriptors": "^1.0.1",
     "morgan": "^1.10.0",
+    "mysql2": "^2.2.5",
     "nodemon": "^2.0.6",
     "path": "^0.12.7",
     "sequelize": "^6.3.5",
     "sequelize-cli": "^6.2.0"
   },
   "scripts": {
-    "start": "",
-    "dev": "NODE_ENV=development nodemon -L app.js"
+    "dev": "NODE_ENV=development nodemon -L app.js",
+    "migrate": "export NODE_ENV=development && sequelize-cli db:migrate",
+    "migrate:undo": "export NODE_ENV=development && sequelize-cli db:migrate:undo"
   }
 }
