--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -5,11 +5,12 @@
   "main": "index.js",
   "author": "Fabio Tovar",
   "license": "MIT",
-  "type": "module",
   "dependencies": {
+    "axios": "^0.21.0",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
     "fs": "^0.0.1-security",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.6",
