--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
+    "express-validator": "^6.8.0",
     "fs": "^0.0.1-security",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.6",
