--- a/companies-ms/.env.development
+++ b/companies-ms/.env.development
@@ -4,3 +4,6 @@ DB_USERNAME=torre_app
 DB_PASSWORD=torre_app_123!
 DB_HOST=companies-db
 DB_PORT=3306
+
+URL_TORRE_SEARCH=https://search.torre.co/
+URL_TORRE_BIO=https://torre.bio/api/
