--- a/companies-ms/package.json
+++ b/companies-ms/package.json
@@ -6,6 +6,7 @@
   "author": "Fabio Tovar",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.21.0",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -13,6 +14,7 @@
     "merge-descriptors": "^1.0.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.2.5",
+    "node-schedule": "^1.3.2",
     "nodemon": "^2.0.6",
     "path": "^0.12.7",
     "sequelize": "^6.3.5",
@@ -21,6 +23,8 @@
   "scripts": {
     "dev": "NODE_ENV=development nodemon -L app.js",
     "migrate": "export NODE_ENV=development && sequelize-cli db:migrate",
-    "migrate:undo": "export NODE_ENV=development && sequelize-cli db:migrate:undo"
+    "migrate:undo": "export NODE_ENV=development && sequelize-cli db:migrate:undo:all",
+    "seed": "export NODE_ENV=development && sequelize-cli db:seed:all",
+    "seed:undo": "export NODE_ENV=development && sequelize-cli db:seed:undo:all"
   }
 }
