--- a/web-application/package.json
+++ b/web-application/package.json
@@ -34,6 +34,7 @@
     "vue2-perfect-scrollbar": "^1.4.0"
   },
   "devDependencies": {
+    "@mdi/font": "^5.8.55",
     "@nuxtjs/eslint-config": "^2.0.0",
     "@nuxtjs/eslint-module": "^1.0.0",
     "@nuxtjs/stylelint-module": "^3.1.0",
